--- a/services/users/Dockerfile
+++ b/services/users/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 WORKDIR /app
-COPY package.json ./
-RUN npm install --production || true
-COPY app.js ./
+COPY package.json package-lock.json ./
+RUN npm install --production
+COPY . .
 EXPOSE 3000
-CMD ["node","app.js"]
+CMD ["node", "app.js"]
