--- a/infra/package.json
+++ b/infra/package.json
@@ -12,5 +12,9 @@
     "build": "tsc",
     "synth": "cdk synth",
     "deploy": "cdk deploy --all"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.114.1-alpha.0",
+    "@aws-sdk/client-dynamodb": "^3.940.0"
   }
 }
