--- a/infra/package.json
+++ b/infra/package.json
@@ -2,19 +2,15 @@
   "name": "infra",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "aws-cdk-lib": "^2.230.0",
-    "constructs": "^10.4.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
-  },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p .",
     "synth": "cdk synth",
     "deploy": "cdk deploy --all"
   },
-  "dependencies": {
-    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.114.1-alpha.0",
-    "@aws-sdk/client-dynamodb": "^3.940.0"
+  "devDependencies": {
+    "aws-cdk-lib": "^2.230.0",
+    "constructs": "^10.4.3",
+    "typescript": "^4.9.5",
+    "ts-node": "^10.9.1"
   }
 }
