--- a/infra/tsconfig.json
+++ b/infra/tsconfig.json
@@ -1,13 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
-    "module": "commonjs",
-    "lib": ["es2020"],
-    "outDir": "dist",
-    "rootDir": "./",
-    "strict": true,
+    "target": "ES2020",
+    "module": "CommonJS",
+    "lib": ["ES2020"],
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+
+    "rootDir": "./infra",
+    "outDir": "./infra/cdk-out",
+
+    "types": ["node"]
   },
-  "include": ["**/*.ts"]
+  "include": ["infra/**/*.ts"],
+  "exclude": ["node_modules", "**/*.js"]
 }
