--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,52 @@
+
+# Node / build
 node_modules/
 dist/
 build/
+
+# Environment
 .env
+.env.*
+
+# Logs
 *.log
-.env.local
+npm-debug.log*
+yarn-error.log*
+
+# Archives
 *.tgz
+*.zip
+
+# Editor / OS
 .vscode/
+.idea/
 .DS_Store
+
+# Infrastructure / IaC
 .terraform/
 .aws-sam/
-*.zip
+
+# CDK / build outputs
+/infra/cdk-out/
+/infra/cdk.out/
+/infra/dist/
+
+# Workspace / monorepo
 **/node_modules
 **/dist
 **/*.stackdump
+
 # npm / lockfiles
 **/package-lock.json
+pnpm-lock.yaml
 yarn.lock
 
-# workspace artifacts
-/node_modules/
-/lambdas/*/dist/
-/infra/dist/
+# serverless / caches / coverage
+.serverless/
+.cache/
+coverage/
+.nyc_output/
 
-# OS/editor
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+# Misc
+.history/
+
