--- a/services/orders/Dockerfile
+++ b/services/orders/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 WORKDIR /app
-COPY package.json package-lock.json ./
+COPY package*.json ./
 RUN npm install --production
 COPY . .
-EXPOSE 3000
-CMD ["node", "app.js"]
+EXPOSE 3001
+CMD ["node", "index.js"]
