--- a/services/orders/package.json
+++ b/services/orders/package.json
@@ -2,11 +2,11 @@
   "name": "orders-service",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "aws-sdk": "^2.1450.0"
   }
 }
