--- a/services/users/package.json
+++ b/services/users/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "aws-sdk": "^2.1450.0"
   },
   "engines": {
     "node": ">=18"
