--- a/services/orders/Dockerfile
+++ b/services/orders/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:18-alpine
 WORKDIR /app
-COPY package*.json ./
+COPY orders/package*.json ./
 RUN npm install --production
-COPY . .
+COPY registerIp.js ./
+COPY orders/index.js ./
 EXPOSE 3001
 CMD ["node", "index.js"]
