--- a/lambdas/router/package.json
+++ b/lambdas/router/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "handler.js",
   "dependencies": {
-    "aws-sdk": "^2.1520.0"
+    "@aws-sdk/client-dynamodb": "^3.600.0",
+    "@aws-sdk/lib-dynamodb": "^3.600.0"
   }
 }
