--- a/services/users/package.json
+++ b/services/users/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "aws-sdk": "^2.1450.0"
+    "@aws-sdk/client-dynamodb": "^3.600.0",
+    "@aws-sdk/lib-dynamodb": "^3.600.0"
   },
   "engines": {
     "node": ">=18"
